--- a/lib/sweet-alert.css
+++ b/lib/sweet-alert.css
@@ -1,4 +1,8 @@
-@import url(//fonts.googleapis.com/css?family=Open+Sans:400,600,700,300);
+/*@import url(//fonts.googleapis.com/css?family=Open+Sans:400,600,700,300);*/
+
+.sweet-alert * {
+  font-family:  collusion-medium, collusion-light, segan, helvetica, arial;
+}
 .sweet-overlay {
   background-color: rgba(0, 0, 0, 0.4);
   position: fixed;
@@ -11,7 +15,7 @@
 
 .sweet-alert {
   background-color: white;
-  font-family: 'Open Sans', sans-serif;
+  /*font-family: 'Open Sans', sans-serif;*/
   width: 478px;
   padding: 17px;
   border-radius: 5px;
@@ -33,28 +37,31 @@
       right: 15px; } }
   .sweet-alert h2 {
     color: #575757;
-    font-size: 30px;
+    font-size: 18px;
     text-align: center;
     font-weight: 600;
     text-transform: none;
-    position: relative; }
+    position: relative; 
+    margin-top: 18px;
+    margin-bottom: 10px; }
   .sweet-alert p {
     color: #797979;
-    font-size: 16px;
+    /*font-size: 16px;*/
     text-align: center;
     font-weight: 300;
     position: relative;
     margin: 0;
     line-height: normal; }
   .sweet-alert button {
+    display: inline-block;
     background-color: #AEDEF4;
     color: white;
     border: none;
     box-shadow: none;
-    font-size: 17px;
+    /*font-size: 17px;*/
     font-weight: 500;
     border-radius: 5px;
-    padding: 10px 32px;
+    /*padding: 10px 32px;*/
     margin: 26px 5px 0 5px;
     cursor: pointer; }
     .sweet-alert button:focus {
