--- a/lib/sweet-alert.css
+++ b/lib/sweet-alert.css
@@ -44,6 +44,20 @@
     position: relative; 
     margin-top: 18px;
     margin-bottom: 10px; }
+  .sweet-alert textarea {
+    color: #797979;
+    text-align: center;
+    font-weight: 300;
+    position: relative;
+    margin: 0;
+    line-height: normal; 
+    text-align: left;
+    padding: 5px;
+    width: 80%;
+    min-height: 20px; /* required */
+    max-height: 200px; /* required */
+    overflow: auto;
+  }
   .sweet-alert p {
     color: #797979;
     /*font-size: 16px;*/
